<resources>
    <string name="app_name">Physical Distancing</string>
    <string name="setting">Setting</string>
    <string name="scanner">Scanner</string>
    <string name="news">News</string>
    <string name="save">Save</string>
    <string name="latest_news">Latest News</string>
    <string name="rssi_threshold">RSSI Threshold</string>
    <string name="notification">Notification</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>