<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_atas">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="13dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            app:cardElevation="10dp"
            android:foreground="?android:attr/selectableItemBackground">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:textSize="25sp"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:id="@+id/vibration_text"
                        android:text="@string/vibration"/>
                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:id="@+id/sound_text"
                        android:text="@string/sound"/>
                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        />
                </RelativeLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="13dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            app:cardElevation="10dp"
            android:foreground="?android:attr/selectableItemBackground">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:text="@string/rssi_threshold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:id="@+id/notif_view"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="17dp"
                    android:layout_below="@+id/notif_view"
                    android:orientation="horizontal">
                    <SeekBar
                        android:id="@+id/rssi_seekbar"
                        android:layout_width="300dp"
                        android:layout_marginTop="5dp"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_threeshold"
                        android:text="0"
                        android:textSize="20sp"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="31dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/save"
        android:textAllCaps="false"/>


</RelativeLayout>